# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: project-check.yml
page_loader/: __init__.py  common.py  download.py  logger.py  parser.py  progress.py  url.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_ download.py  test_download.py
tests/fixtures/: after.html  before.html  ru-hexlet-io-courses.html
tests/fixtures/after/: ru-hexlet-io-courses.html
tests/fixtures/before/: courses.html
